# MASterSelects

./: .browser-logs.json  .gitignore  CLAUDE.md  Cargo.toml  FEATURES.md  OPTIMIZATION-PLAN-V2.md  README.md  TERMINAL_REMOTE_README.md  eslint.config.js  index.html  package-lock.json  package.json  plan-native-engine.md  plannested.md  vite.config.ts
.claude/commands/: masterselects.md
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
crates/app-state/: Cargo.toml
crates/audio/: Cargo.toml
crates/audio/src/: decoder.rs  error.rs  lib.rs  meter.rs  mixer.rs  output.rs  resampler.rs  sync.rs  waveform.rs
crates/common/: Cargo.toml
crates/compositor/: Cargo.toml
crates/decoder/: Cargo.toml
crates/decoder/src/: lib.rs  manager.rs  pool.rs  prefetch.rs  software.rs  thumbnail.rs
crates/decoder/src/nvdec/: decoder.rs  ffi.rs  mod.rs  session.rs
crates/decoder/src/vulkan_video/: decoder.rs  mod.rs
crates/decoder/tests/: nvdec_integration.rs
crates/demux/: Cargo.toml
crates/effects/: Cargo.toml
crates/encoder/: Cargo.toml
crates/encoder/src/: error.rs  export.rs  lib.rs  session.rs
crates/encoder/src/nvenc/: buffer.rs  ffi.rs  mod.rs  params.rs
crates/encoder/src/vulkan_video/: encoder.rs  mod.rs
crates/gpu-hal/: Cargo.toml  build.rs
crates/gpu-hal/src/: kernels.rs  lib.rs  select.rs
crates/gpu-hal/src/cuda/: context.rs  error.rs  interop.rs  kernel.rs  memory.rs  mod.rs  stream.rs
crates/gpu-hal/src/vulkan/: context.rs  error.rs  memory.rs  mod.rs  pipeline.rs  queue.rs  shader.rs
crates/mux/: Cargo.toml
crates/project/: Cargo.toml
crates/timeline-eval/: Cargo.toml
docs/Features/: .~lock.UI-Panels.md#  AI-Integration.md  Audio.md  Effects.md  Export.md  GPU-Engine.md  Keyboard-Shortcuts.md  Keyframes.md  Masks.md  Media-Panel.md  Multicam-AI.md  Native-Helper.md  Preview.md  Project-Persistence.md  Proxy-System.md  README.md  SharedDecoderArchitecture.md  Text-Clips.md  Timeline.md  UI-Panels.md  YouTube.md  effects-system.md
docs/plans/: Codebase-Cleanup-Plan.md  WebCodecProRes.md  audio-export-plan.md  continuation-prompt.md  native-engine-checklist.md  native-engine-plan.md  playback-pipeline-analysis-prompt.md  playback-pipeline-consensus-analysis.md  source-owned-media-runtime-audit.md  source-owned-media-runtime-next-steps.md  source-owned-media-runtime-plan.md
docs/refactor/: FrameExporter-Refactor-Plan.md  MediaStore-Refactor-Plan.md  Timeline-Refactor-Plan.md
docs/research/: WebCodecs-NLE-Research.md
kernels/cuda/: blend.cu  composite.cu  nv12_to_rgba.cu  transform.cu
kernels/vulkan/: blend.comp  composite.comp  nv12_to_rgba.comp  transform.comp
masterselects-helper/: Cargo.toml
masterselects-helper/src/: session.rs
native-helper/: app.js  package-lock.json  package.json  server.js
native-ui/: Cargo.toml  build.rs
native-ui/src/: app.rs  audio_pipeline.rs  bridge.rs  engine.rs  export.rs  gpu_pipeline.rs  main.rs  media_panel.rs  preview_panel.rs  properties_panel.rs  theme.rs  timeline.rs  toolbar.rs
public/: clippy-outro.webm  clippy.webm  test_prores.mov
public/downloads/: masterselects-helper
public/ffmpeg/: ffmpeg-core.js
server/: Cargo.toml
server/src/: auth.rs  config.rs  main.rs  session.rs
src/: App.css  App.tsx  changelog-data.json  main.tsx  version.ts
src/components/: ClipPropertiesPanel.tsx  EffectsPanel.tsx  ExportDialog.tsx  ExportPanel.tsx  MaskOverlay.tsx  MediaPanel.tsx  Preview.tsx  Timeline.tsx  Toolbar.tsx  index.ts
src/effects/: EffectControls.tsx  EffectsPipeline.ts  index.ts  types.ts
src/engine/: FrameExporter.ts  ParallelDecodeManager.ts  WebCodecsAudioPlayer.ts  WebCodecsExportMode.ts  WebCodecsPlayer.ts  WebGPUEngine.ts  featureFlags.ts  index.ts  webCodecsTypes.ts
src/hooks/: useClipPanelSync.ts  useEngine.ts  useGlobalHistory.ts  useMIDI.ts  useTheme.ts
src/services/: aiTools.ts  apiKeyManager.ts  audioAnalyzer.ts  audioExtractor.ts  audioManager.ts  audioSync.ts  claudeService.ts  clipAnalyzer.ts  clipTranscriber.ts  compositionAudioMixer.ts  compositionRenderer.ts  fileSystemService.ts  framePhaseMonitor.ts  klingService.ts  layerBuilder.ts  layerPlaybackManager.ts  logger.ts  multicamAnalyzer.ts  performanceMonitor.ts  piApiService.ts  playbackDebugSnapshot.ts  playbackDebugStats.ts  playbackHealthMonitor.ts  previewRenderManager.ts  projectDB.ts  projectFileService.ts  projectSync.ts  proxyFrameCache.ts  proxyGenerator.ts  proxyPlayer.ts  ramPreviewEngine.ts  sceneDescriber.ts  thumbnailRenderer.ts  (+4 more)
tests/: setup.ts
(+486 files in other folders)
