[package]
name = "terminal-server"
version = "0.1.0"
edition = "2021"
description = "WebSocket terminal server for remote access from Android"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
dirs = "5"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = true

[[bin]]
name = "terminal-server"
path = "src/main.rs"
